--- a/management_app/package.json
+++ b/management_app/package.json
@@ -10,6 +10,9 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/google-signin": "^5.0.0",
+    "firebase": "^8.2.1",
+    "native-base": "^2.15.0",
     "react": "16.13.1",
     "react-native": "0.63.4"
   },
