--- a/management_app/package.json
+++ b/management_app/package.json
@@ -10,18 +10,38 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@jest/types": "^26.6.2",
+    "@react-native-community/cli": "^4.13.1",
     "@react-native-community/google-signin": "^5.0.0",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-picker/picker": "^1.9.8",
     "@react-navigation/native": "^5.8.10",
+    "@react-navigation/stack": "^5.12.8",
+    "@sideway/address": "^4.1.0",
+    "core-js": "^3.8.1",
+    "domexception": "^2.0.1",
+    "fbjs": "^3.0.0",
+    "fbjs-scripts": "^3.0.0",
     "firebase": "^8.2.1",
+    "fsevents": "^2.2.1",
+    "har-validator": "^5.1.5",
+    "jest-worker": "^24.9.0",
+    "joi": "^17.3.0",
+    "metro": "^0.58.0",
+    "metro-babel-register": "^0.58.0",
+    "metro-config": "^0.58.0",
     "native-base": "^2.15.0",
+    "node-fetch": "^3.0.0-beta.9",
+    "promise": "^8.1.0",
     "react": "16.13.1",
-    "react-native": "0.63.4",
+    "react-native": "^0.63.4",
     "react-native-gesture-handler": "^1.9.0",
-    "react-native-reanimated": "^1.13.2",
+    "react-native-maps": "^0.27.1",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.16.1",
     "react-native-windows": "^0.63.15",
+    "request": "^2.88.2",
+    "request-promise-native": "^1.0.9",
     "typescript": "^4.1.3"
   },
   "devDependencies": {
